[package]
name = "rustplayground"
version = "0.1.0"
authors = ["Jaroslaw Konik <konikjar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.1"
rand = "*"
rayon = "*"
framebuffer = "0.3.1"
minifb = "0.23.0"
